--- a/templates/resources/it_automation_default_policy.md.tmpl
+++ b/templates/resources/it_automation_default_policy.md.tmpl
@@ -1,13 +1,25 @@
 ---
 page_title: "{{.Name}} {{.Type}} - {{.ProviderName}}"
-subcategory: "IT Automation"
+{{ if gt (len (split .Description " --- ")) 1 -}}
+subcategory: "{{ index (split .Description " --- ") 0 }}"
+{{- else -}}
+subcategory: ""
+{{- end }}
 description: |-
+{{ if gt (len (split .Description " --- ")) 1 -}}
+{{ index (split .Description " --- ") 1 | plainmarkdown | trimspace | prefixlines "  " }}
+{{- else -}}
 {{ .Description | plainmarkdown | trimspace | prefixlines "  " }}
+{{- end }}
 ---
 
 # {{.Name}} ({{.Type}})
 
+{{ if gt (len (split .Description " --- ")) 1 -}}
+{{ index (split .Description " --- ") 1 | trimspace }}
+{{ else }}
 {{ .Description | trimspace }}
+{{- end }}
 
 ~> **Important** Default policies are created by CrowdStrike and cannot be created or deleted via Terraform. You can only manage the description and configuration settings (concurrency, execution, and resources). Default policies cannot be enabled/disabled, assigned to host groups, or have their names changed.
 
