--- a/templates/resources/it_automation_task_group.md.tmpl
+++ b/templates/resources/it_automation_task_group.md.tmpl
@@ -1,13 +1,25 @@
 ---
 page_title: "{{.Name}} {{.Type}} - {{.ProviderName}}"
-subcategory: "IT Automation"
+{{ if gt (len (split .Description " --- ")) 1 -}}
+subcategory: "{{ index (split .Description " --- ") 0 }}"
+{{- else -}}
+subcategory: ""
+{{- end }}
 description: |-
+{{ if gt (len (split .Description " --- ")) 1 -}}
+{{ index (split .Description " --- ") 1 | plainmarkdown | trimspace | prefixlines "  " }}
+{{- else -}}
 {{ .Description | plainmarkdown | trimspace | prefixlines "  " }}
+{{- end }}
 ---
 
 # {{.Name}} ({{.Type}})
 
+{{ if gt (len (split .Description " --- ")) 1 -}}
+{{ index (split .Description " --- ") 1 | trimspace }}
+{{ else }}
 {{ .Description | trimspace }}
+{{- end }}
 
 ~> **Note** When tasks are added to a task group, they automatically inherit the group's `access_type` and `assigned_user_ids` settings. Tasks in a group cannot have these fields configured individually on the task resource.
 
